# r53-ddns

./: .gitignore  CNAME  Cargo.toml  README.md  RELEASE-NOTES.md  SECURITY.md  _config.yml  cliff.toml
.github/workflows/: build.yml  clippy.yml  release.yml  tag.yml
_includes/: head-custom.html
docs/: _config.yml  alert-script.md  contribute.md  index.md  install-cargo.md  install-homebrew.md  install-other.md  install-snapcraft.md  install.md  issues.md  options.md  setup-cron.md  setup-launchd.md  setup-systemd.md  usage.md
docs/_data/: nav.yml
docs/_includes/: head_custom.html  nav_footer_custom.html  sidebar.html  site_nav.html
docs/_layouts/: docs.html
docs/css/: README.md
docs/install/: index.md  install-cargo.md  install-homebrew.md  install-other.md  install-snapcraft.md
docs/usage/: alert-script.md  index.md  setup-cron.md  setup-launchd.md  setup-systemd.md
src/: cli.rs  main.rs  snap.rs
