[package]
name = "r53-ddns"
version = "0.1.11"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "Set an Amazon Route 53 DNS record for the server/network"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/r53-ddns"
readme = "README.md"
keywords = ["utility"]
categories = ["networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "r53-ddns"

[profile.minsize]
strip = true
opt-level = "s"
lto = "fat"
panic = "abort"
inherits = "release"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
regex = "1.7.0"
reqwest = { version = "0.11", default_features=false, features = ["rustls-tls-native-roots"] }
rusoto_core = { version="0.48", default_features=false, features=["rustls"] }
rusoto_route53 = { version="0.48", default_features=false, features=["rustls"] }
tokio = { version = "1", features = ["macros"] }
dirs-next = "2.0.0"
snapcraft = "0.1.0"
