[package]
name = "r53-ddns"
version = "1.0.16"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "Set an Amazon Route 53 DNS record for the server/network"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/r53-ddns"
readme = "README.md"
keywords = ["utility"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "r53-ddns"

[profile.minsize]
strip = true
opt-level = "s"
lto = "fat"
panic = "abort"
inherits = "release"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.29"
log4rs = "1.4.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features=false}
rusoto_core = { version="0.48", default-features=false, features=["rustls"] }
rusoto_route53 = { version="0.48", default-features=false, features=["rustls"] }
tokio = { version = "1.49.0", features = ["macros"] }
dirs-next = "2.0"
snapcraft = "1.0.0"
call_logger = "1.0.1"
